<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:ignore="ContentDescription">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/register_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/register_top_right_cloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/register_cloud_top_right"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/register_new_account_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"

                android:paddingHorizontal="8dp"
                android:text="@string/new_account"
                android:textColor="@color/primary_blue"
                android:textSize="32sp"
                android:textStyle="bold"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/register_google_clickable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingHorizontal="22dp"
                android:paddingVertical="18dp"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp"

                android:background="@drawable/background_launcher_edittext"
                android:elevation="4dp"
                android:clickable="true"
                android:focusable="true"

                app:layout_constraintTop_toBottomOf="@id/register_top_right_cloud"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_google_logo"
                    android:contentDescription="@string/sign_up_via_google"
                    android:layout_marginEnd="12dp" />

                <TextView
                    android:id="@+id/register_google_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_via_google"
                    android:textColor="@color/primary_blue"
                    android:textSize="20sp"
                    android:fontFamily="@font/roboto" />
            </LinearLayout>

            <TextView
                android:id="@+id/register_username_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto"
                android:text="@string/email"

                android:textColor="@color/primary_blue"
                android:textSize="16sp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_google_clickable" />

            <TextView
                android:id="@+id/register_username_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="4dp"
                android:elevation="6dp"
                android:fontFamily="@font/roboto"

                android:textColor="@color/primary_red"

                android:textSize="12sp"
                android:visibility="invisible"

                app:layout_constraintStart_toStartOf="@id/register_username_input"
                app:layout_constraintTop_toBottomOf="@id/register_username_input" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/register_username_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="4dp"
                android:background="@drawable/background_launcher_edittext"
                android:elevation="4dp"
                android:fontFamily="@font/roboto"
                android:inputType="text"

                android:lines="1"
                android:maxLength="28"
                android:maxLines="1"

                android:paddingHorizontal="22dp"
                android:paddingVertical="18dp"
                android:textColor="@color/primary_blue"
                android:textSize="18sp"

                app:layout_constraintEnd_toEndOf="@id/register_username_title"
                app:layout_constraintStart_toStartOf="@id/register_username_title"
                app:layout_constraintTop_toBottomOf="@id/register_username_title" />

            <TextView
                android:id="@+id/register_password_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto"
                android:text="@string/password"

                android:textColor="@color/primary_blue"
                android:textSize="18sp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_username_input" />

            <TextView
                android:id="@+id/register_password_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:elevation="6dp"

                android:fontFamily="@font/roboto"

                android:textColor="@color/primary_red"
                android:textSize="12sp"
                android:visibility="invisible"

                app:layout_constraintStart_toStartOf="@id/register_password_input"
                app:layout_constraintTop_toBottomOf="@id/register_password_input" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/register_password_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="4dp"
                android:background="@drawable/background_launcher_edittext"
                android:elevation="4dp"
                android:ems="15"
                android:fontFamily="@font/roboto"

                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:paddingHorizontal="22dp"

                android:paddingVertical="18dp"
                android:textColor="@color/primary_blue"
                android:textSize="18sp"

                app:layout_constraintEnd_toEndOf="@id/register_password_title"
                app:layout_constraintStart_toStartOf="@id/register_password_title"
                app:layout_constraintTop_toBottomOf="@id/register_password_title" />

            <ImageButton
                android:id="@+id/register_show_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginEnd="20dp"
                android:background="@drawable/ripple_rounded"
                android:elevation="4dp"
                android:padding="8dp"

                android:src="@drawable/ic_launcher_show_password"

                app:layout_constraintBottom_toBottomOf="@id/register_password_input"
                app:layout_constraintEnd_toEndOf="@id/register_password_input"
                app:layout_constraintTop_toTopOf="@id/register_password_input" />

            <ImageView
                android:id="@+id/register_bottom_left_cloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/register_cloud_bottom_left"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_password_input" />

            <ImageView
                android:id="@+id/register_bottom_right_cloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/register_cloud_bottom_right"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_password_input" />

            <ImageView
                android:id="@+id/register_bird"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/register_bird"

                app:layout_constraintBottom_toBottomOf="@id/register_bottom_left_cloud"
                app:layout_constraintEnd_toStartOf="@id/register_bottom_right_cloud"
                app:layout_constraintStart_toEndOf="@id/register_bottom_left_cloud"
                app:layout_constraintTop_toTopOf="@id/register_bottom_left_cloud" />

            <TextView
                android:id="@+id/register_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="12dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/roboto"
                android:gravity="center"

                android:linksClickable="true"

                android:text="@string/by_continuing_you_agree_to_our_privacy_policy"
                android:textColor="@color/primary_blue"

                android:textColorLink="@color/primary_blue"
                android:textSize="14sp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_bottom_left_cloud" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_create_button"
                style="@style/LauncherButton"
                android:layout_width="match_parent"

                android:layout_height="70dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="12dp"

                android:clickable="false"

                android:text="@string/create"

                android:textSize="16sp"
                app:cornerRadius="32dp"

                app:icon="@drawable/ic_bird"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_privacy_policy" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="40dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_create_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>